update ui & clean code